[package]
name = "image-depth-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[dependencies]
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
cuda = ["ort/cuda"]
